libs/image/kis_updater_context.cpp
@@ -117,6 +117,16 @@ bool KisUpdaterContext::isJobAllowed(KisBaseRectsWalkerSP walker)
     return !intersects;
 }
 
+void KisUpdaterContext::startThread(int index)
+{
+    {
+        QMutexLocker l(&m_runningThreadsMutex);
+        m_numRunningThreads++;
+    }
+
+    m_threadPool.start(m_jobs[index]);
+}
+
 /**
  * NOTE: In theory, isJobAllowed() and addMergeJob() should be merged into
  * one atomic method like `bool push()`, because this implementation
@@ -136,7 +146,7 @@ void KisUpdaterContext::addMergeJob(KisBaseRectsWalkerSP walker)
     // it might happen that we call this function from within
     // the thread itself, right when it finished its work
     if (shouldStartThread && !m_testingMode) {
-        m_threadPool.start(m_jobs[jobIndex]);
+        startThread(jobIndex);
     }
 }
 
@@ -151,7 +161,7 @@ void KisUpdaterContext::addStrokeJob(KisStrokeJob *strokeJob)
     // it might happen that we call this function from within
     // the thread itself, right when it finished its work
     if (shouldStartThread && !m_testingMode) {
-        m_threadPool.start(m_jobs[jobIndex]);
+        startThread(jobIndex);
     }
 }
 
@@ -166,13 +176,17 @@ void KisUpdaterContext::addSpontaneousJob(KisSpontaneousJob *spontaneousJob)
     // it might happen that we call this function from within
     // the thread itself, right when it finished its work
     if (shouldStartThread && !m_testingMode) {
-        m_threadPool.start(m_jobs[jobIndex]);
+        startThread(jobIndex);
     }
 }
 
 void KisUpdaterContext::waitForDone()
 {
-    m_threadPool.waitForDone();
+    QMutexLocker l(&m_runningThreadsMutex);
+
+    while(m_numRunningThreads > 0) {
+        m_waitForDoneCondition.wait(l.mutex());
+    }
 }
 
 bool KisUpdaterContext::walkerIntersectsJob(KisBaseRectsWalkerSP walker,
@@ -241,6 +255,17 @@ void KisUpdaterContext::jobFinished()
 {
     m_lodCounter.removeLod();
     if (m_scheduler) m_scheduler->spareThreadAppeared();
+}
+
+void KisUpdaterContext::jobThreadExited()
+{
+    QMutexLocker l(&m_runningThreadsMutex);
+    m_numRunningThreads--;
+    KIS_SAFE_ASSERT_RECOVER_NOOP(m_numRunningThreads >= 0);
+
+    if (m_numRunningThreads <= 0) {
+        m_waitForDoneCondition.wakeAll();
+    }
 }
 
 void KisUpdaterContext::setTestingMode(bool value)
